--- a/stylesheet.css
+++ b/stylesheet.css
@@ -96,4 +96,88 @@ header ul {
     z-index: 1 ;
 }
 
-/* footer */
+/* about */
+.tentang h2 {
+    text-align: center;
+    padding: 30px;
+    color: #239b76;
+    margin-bottom: 10px;
+}
+
+.tentang p {
+    color: #666;
+    letter-spacing: 2px;
+}
+
+/* Profil
+.profil h2 {
+    text-align: center;
+    padding: 30px;
+    color: #239b76;
+    margin-bottom: 10px;
+} */
+
+/* foto */
+.lesson-wrapper {
+    height: 400px;
+    padding-bottom: 80px;
+    margin-top: 50px;
+    background-color: #f7f7f7;
+    text-align: center;
+  }
+  
+  .heading {
+    padding-top: 30px;
+    padding-bottom: 30px;
+    color: #5f5d60;
+  }
+  
+  .heading h2 {
+    color: #239b76;
+  }
+  
+  .lesson {
+    float: left;
+    width: 20%;
+  }
+  
+  .lesson-icon {
+    position: relative;
+  }
+  
+  .lesson-icon p {
+    position: absolute;
+    top: 90px;
+    width: 100%;
+    color: white;
+  }
+
+  .lesson-icon img {
+      width: 80%;
+  }
+
+  .txt-contents {
+    width: 80%;
+    display: inline-block;
+    margin-top: 20px;
+    font-size: 15px;
+    color: #239b76;
+  }
+  
+  .heading h3 {
+    font-weight: normal;
+  }
+  
+  .message-wrapper {
+    border-bottom: 1px solid #eee;
+    padding-bottom: 80px;
+    text-align: center;
+  }
+  
+  .message {
+    padding: 15px 40px;
+    background-color: #5dca88;
+    cursor: pointer;
+    box-shadow: 0 7px #1a7940;
+  }
+  
