--- a/stylesheet.css
+++ b/stylesheet.css
@@ -85,6 +85,7 @@ header ul {
     display: inline-block;
     opacity: 0.8;
     border-radius: 4px;
+    animation: animasi 2s linear infinite;
   }
 
 .btn:hover {
@@ -93,7 +94,21 @@ header ul {
 
 .mulai {
     background-color: #239b76;
-    z-index: 1 ;
+}
+
+@keyframes animasi {
+    0% {
+        box-shadow: 0 0 0 0, rgba(68, 236, 200, 0.466), 0 0 0 0, rgba(68, 236, 200, 0.466);
+    }
+    30% {
+        box-shadow: 0 0 0 50px, rgba(68, 236, 200, 0.466), 0 0 0 0, rgba(68, 236, 200, 0);
+    }
+    65% {
+        box-shadow: 0 0 0 50px, rgba(68, 236, 200, 0.466), 0 0 0 30px, rgba(68, 236, 200, 0);
+    }
+    100% {
+        box-shadow: 0 0 0 0, rgba(68, 236, 200, 0.466),0 0 0 30px, rgba(68, 236, 200, 0);
+    }
 }
 
 /* about */
@@ -180,4 +195,12 @@ header ul {
     cursor: pointer;
     box-shadow: 0 7px #1a7940;
   }
+
+  /* footer */
   
+  footer {
+	padding:30px 0;
+	background-color: #333;
+	color: #fff;
+	text-align: center;
+  } 
